[tool.poetry]
name = "expressive_regex"
version = "0.1.0"
description = ""
authors = ["fsadannn <fsadannn@gmail.com>"]
license = "MIT"
readme = "Readme.md"

[tool.poetry.dependencies]
python = ">=3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
codecov = "^2.1.8"
pytest-cov = "^2.10.0"
pylint = "^2.5.3"
pylint-exit = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
